--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   },
   "dependencies": {
     "body-parser": "^1.18.3",
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "mysql": "^2.18.1",
+    "react-scripts": "^3.4.3"
   },
   "devDependencies": {
     "concurrently": "^4.1.2"
