--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
   },
   "dependencies": {
     "body-parser": "^1.18.3",
+    "collaborative-filter": "^1.0.0-beta.3",
     "express": "^4.16.4",
+    "mathjs": "^7.6.0",
+    "mysql": "^2.18.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0"
