--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
+  "homepage":"http://IndushaS.github.io/recipeApp",
   "name": "recipeapp",
   "version": "1.0.0",
   "scripts": {
+    "predeploy": "yarn dev",
+    "deploy": "gh-pages -d dev",
     "client": "cd client && yarn start",
     "server": "nodemon server.js",
     "dev": "concurrently --kill-others-on-fail \"yarn server\" \"yarn client\""
@@ -21,6 +24,7 @@
     "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
-    "concurrently": "^4.1.2"
+    "concurrently": "^4.1.2",
+    "gh-pages": "^3.1.0"
   }
 }
