--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "collaborative-filter": "^1.0.0-beta.3",
     "express": "^4.17.1",
     "express-favicon": "^2.0.1",
+    "mysql": "^2.18.1",
     "path": "^0.12.7",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
