--- a/package.json
+++ b/package.json
@@ -7,14 +7,20 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "bootstrap": "^4.5.3",
     "collaborative-filter": "^1.0.0-beta.3",
     "express": "^4.17.1",
     "express-favicon": "^2.0.1",
     "mysql": "^2.18.1",
     "path": "^0.12.7",
+    "pure-react-carousel": "^1.27.6",
     "react": "^17.0.1",
+    "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
+    "react-json-pretty": "^2.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-simple-flex-grid": "^1.3.21",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
@@ -22,7 +28,6 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
- 
   },
   "eslintConfig": {
     "extends": [
