--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-simple-flex-grid": "^1.3.21",
+    "react-tidy": "^1.1.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
