--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
     "react-json-pretty": "^2.2.0",
+    "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-simple-flex-grid": "^1.3.21",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
