--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,9 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
+
 /.pnp
 .pnp.js
-.eslintcache
 
 # testing
 /coverage
@@ -22,3 +21,8 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+/node_modules
+./client/node_modules
+/client/node_modules
+
